5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4348/executions/1596_2895.log
== TEST (2019-03-26 18:50:35) 
-- CODE:
qtd_de_jogos = float(input())
valor_unitario = 5
valor_do_frete = 10
-- OUTPUT:
8
5
1
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:44) 
-- CODE:
qtd_de_jogos = float(input())
valor_unitario = 5
valor_do_frete = 10
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:50:46) 
-- CODE:
qtd_de_jogos = float(input())
valor_unitario = 5
valor_do_frete = 10
print(a)
-- EXECUTION TIME:
0.140646
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 4, in <module>
    print(a)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:53) 
-- CODE:
qtd_de_jogos = float(input())

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:51:45) 
-- CODE:
qtd_de_jogos = input("quantidade de jogos")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:52:54) 
-- CODE:
qtd_de_jogos = input("quantidade de jogos")
valor_unitário = input("valor unitario")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:54:27) 
-- CODE:
qtd_de_jogos = input("quantidade de jogos")
valor_unitário = input("valor unitario")
valor_do_frete = input("valor do frete")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:55:45) 
-- CODE:
qtd_de_jogos = input("quantidade de jogos")
valor_unitário = input("valor unitario")
valor_do_frete = input("valor do frete")
preço_total = 25

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:55:49) 
-- CODE:
qtd_de_jogos = input("quantidade de jogos")
valor_unitário = input("valor unitario")
valor_do_frete = input("valor do frete")
preço_total = 25

-- EXECUTION TIME:
0.18293
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:55:52) 
-- CODE:
qtd_de_jogos = input("quantidade de jogos")
valor_unitário = input("valor unitario")
valor_do_frete = input("valor do frete")
preço_total = 25

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 10:42:31) 
-- CODE:
qtd_de_jogos = input("quantidade de jogos")
valor_unitário = float(input("valor unitario"))
valor_do_frete = float(input("valor do frete"))
preço_total = 25

-- EXECUTION TIME:
0.16074
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 10:42:57) 
-- CODE:
qtd_de_jogos = input("quantidade de jogos")
valor_unitário = float(input("valor unitario"))
valor_do_frete = float(input("valor do frete"))
preço_total = 25

-- EXECUTION TIME:
0.117399
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:46:18) 
-- CODE:
qtd_de_jogos = input("quantidade de jogos")
print("qtd_de_jogos")
valor_unitario = float(input("valor unitario"))
print("valor unitario")
valor_do_frete = float(input("valor do frete"))
print("valor do frete")
preco_total = 25
print("preco total")

-- OUTPUT:
qtd_de_jogos
valor unitario
valor do frete
preco total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:46:26) 
-- CODE:
qtd_de_jogos = input("quantidade de jogos")
print("qtd_de_jogos")
valor_unitario = float(input("valor unitario"))
print("valor unitario")
valor_do_frete = float(input("valor do frete"))
print("valor do frete")
preco_total = 25
print("preco total")

-- EXECUTION TIME:
0.215095
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
qtd_de_jogos
valor unitario
valor do frete
preco total
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
qtd_de_jogos
valor unitario
valor do frete
preco total
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
qtd_de_jogos
valor unitario
valor do frete
preco total
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:47:33) 
-- CODE:
qtd_de_jogos = input("quantidade de jogos")
print("qtd_de_jogos")
valor_unitario = float(input("valor unitario"))
print("valor unitario")
valor_do_frete = float(input("valor do frete"))
print("valor do frete")
preco_total = 25
print("preco total")

-- OUTPUT:
qtd_de_jogos
valor unitario
valor do frete
preco total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:48:42) 
-- CODE:
qtd_de_jogos = input("quantidade de jogos")
valor_unitario = float(input("valor unitario"))
valor_do_frete = float(input("valor do frete"))
preco_total = 25
print("qtd_de_jogos")
print("valor unitario")
print("valor do frete")
print("preco total")


-- OUTPUT:
qtd_de_jogos
valor unitario
valor do frete
preco total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:50:01) 
-- CODE:
qtd_de_jogos = input("quantidade de jogos")
valor_unitario = float(input("valor unitario"))
valor_do_frete = float(input("valor do frete"))
preco_total = 25
print("qtd_de_jogos")
print("valor unitario")
print("valor do frete")
print("preco total")


-- OUTPUT:
qtd_de_jogos
valor unitario
valor do frete
preco total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:50:06) 
-- CODE:
qtd_de_jogos = input("quantidade de jogos")
valor_unitario = float(input("valor unitario"))
valor_do_frete = float(input("valor do frete"))
preco_total = 25
print("qtd_de_jogos")
print("valor unitario")
print("valor do frete")
print("preco total")


-- EXECUTION TIME:
0.145932
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
qtd_de_jogos
valor unitario
valor do frete
preco total
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
qtd_de_jogos
valor unitario
valor do frete
preco total
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
qtd_de_jogos
valor unitario
valor do frete
preco total
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:01:04) 
-- CODE:
qtd_de_jogos =int(input("quantidade de jogos"))




-- OUTPUT:
qtd_de_jogos
valor unitario
valor do frete
preco total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:01:08) 
-- CODE:
qtd_de_jogos =int(input("quantidade de jogos"))




-- EXECUTION TIME:
0.147038
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:

-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:

-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:01:10) 
-- CODE:
qtd_de_jogos =int(input("quantidade de jogos"))




-- OUTPUT:
qtd_de_jogos
valor unitario
valor do frete
preco total
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:05:23) 
-- CODE:
qtd_de_jogos =int(input("quantidade de jogos"))
valor_unit=int(input("valor unitario"))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    valor_unit=int(input())
ValueError: invalid literal for int() with base 10: '45.0'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 22:14:21) 
-- CODE:
qtd_de_jogos =int(input("digite a quantidade de jogos"))
valor_unit=float(input("digite o valor unitario"))
valor_frete=float(input("digite o valor do frete"))
preço_total=float(input("qtd_de_jogod*valor_unit+valor_frete"))






-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    preço_total=float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:15:01) 
-- CODE:
qtd_de_jogos =int(input("digite a quantidade de jogos"))
valor_unit=float(input("digite o valor unitario"))
valor_frete=float(input("digite o valor do frete"))
preço_total=float(input("qtd_de_jogod*valor_unit+valor_frete"))






-- EXECUTION TIME:
0.156167
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 4, in <module>
    pre\xe7o_total=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:20:43) 
-- CODE:
qtd_de_jogos =int(input("digite a quantidade de jogos"))
valor_unit=float(input("digite o valor unitario"))
valor_frete=float(input("digite o valor do frete"))
preço_total=float(input("qtd_de_jogod*valor_unit+valor_frete"))
print("preço total")





-- EXECUTION TIME:
0.190939
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 4, in <module>
    pre\xe7o_total=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:20:57) 
-- CODE:
qtd_de_jogos =int(input("digite a quantidade de jogos"))
valor_unit=float(input("digite o valor unitario"))
valor_frete=float(input("digite o valor do frete"))
preço_total=float(input("qtd_de_jogod*valor_unit+valor_frete"))
print(preço_total)





-- EXECUTION TIME:
0.192654
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/2895/main.py", line 4, in <module>
    pre\xe7o_total=float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 22:25:54) 
-- CODE:
qtd_de_jogos =int(input("digite a quantidade de jogos:"))
valor_unit=float(input("digite o valor unitario:"))
valor_frete=float(input("digite o valor do frete:"))
total=(qtd_de_jogos*valor_unit)+valor_frete
print(total)





-- EXECUTION TIME:
0.172289
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
